# Course_Work_5

./: README.md  main.py  pyproject.toml
src/classes/: dbmanager.py  headhunterapi.py
src/utl/: config.py  utils.py
